Fixed Boolean instantiation, malformed comments and added @since tags. Did not fix the inline conditionals, as I am not sure if we should replace them with ugly if-then-else when there is no control flow construct necessary. Furthermore, the JMS broker can trigger Exception, which is also not allowed in CHECKSTYLE. However, I cannot fix that.